--- a/prepros-6.config
+++ b/prepros-6.config
@@ -5,12 +5,13 @@
   "fileConfigs": [
     {
       "path": "sass/index.scss",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"css/style.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"css/style.css\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
     }
   ],
   "fileTree": {
     "expandedDirs": [
-      "js/lib"
+      "js/lib",
+      "sass"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -128,7 +129,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
