Working with api

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -61,6 +61,71 @@
         "sass/breakpoint-sass/breakpoint/parsers/triple/_default.scss",
         "sass/breakpoint-sass/breakpoint/parsers/resolution/_resolution.scss"
       ]
+    },
+    {
+      "path": "sass/breakpoint-sass/_breakpoint.scss",
+      "imports": [
+        "sass/breakpoint-sass/breakpoint/_settings.scss",
+        "sass/breakpoint-sass/breakpoint/_context.scss",
+        "sass/breakpoint-sass/breakpoint/_helpers.scss",
+        "sass/breakpoint-sass/breakpoint/_parsers.scss",
+        "sass/breakpoint-sass/breakpoint/_no-query.scss",
+        "sass/breakpoint-sass/breakpoint/_respond-to.scss",
+        "sass/breakpoint-sass/breakpoint/_legacy-settings.scss",
+        "sass/breakpoint-sass/breakpoint/parsers/_query.scss",
+        "sass/breakpoint-sass/breakpoint/parsers/_single.scss",
+        "sass/breakpoint-sass/breakpoint/parsers/_double.scss",
+        "sass/breakpoint-sass/breakpoint/parsers/_triple.scss",
+        "sass/breakpoint-sass/breakpoint/parsers/_resolution.scss",
+        "sass/breakpoint-sass/breakpoint/parsers/single/_default.scss",
+        "sass/breakpoint-sass/breakpoint/parsers/double/_default-pair.scss",
+        "sass/breakpoint-sass/breakpoint/parsers/double/_double-string.scss",
+        "sass/breakpoint-sass/breakpoint/parsers/double/_default.scss",
+        "sass/breakpoint-sass/breakpoint/parsers/triple/_default.scss",
+        "sass/breakpoint-sass/breakpoint/parsers/resolution/_resolution.scss"
+      ]
+    },
+    {
+      "path": "sass/breakpoint-sass/breakpoint/_parsers.scss",
+      "imports": [
+        "sass/breakpoint-sass/breakpoint/parsers/_query.scss",
+        "sass/breakpoint-sass/breakpoint/parsers/_single.scss",
+        "sass/breakpoint-sass/breakpoint/parsers/_double.scss",
+        "sass/breakpoint-sass/breakpoint/parsers/_triple.scss",
+        "sass/breakpoint-sass/breakpoint/parsers/_resolution.scss",
+        "sass/breakpoint-sass/breakpoint/parsers/single/_default.scss",
+        "sass/breakpoint-sass/breakpoint/parsers/double/_default-pair.scss",
+        "sass/breakpoint-sass/breakpoint/parsers/double/_double-string.scss",
+        "sass/breakpoint-sass/breakpoint/parsers/double/_default.scss",
+        "sass/breakpoint-sass/breakpoint/parsers/triple/_default.scss",
+        "sass/breakpoint-sass/breakpoint/parsers/resolution/_resolution.scss"
+      ]
+    },
+    {
+      "path": "sass/breakpoint-sass/breakpoint/parsers/_double.scss",
+      "imports": [
+        "sass/breakpoint-sass/breakpoint/parsers/double/_default-pair.scss",
+        "sass/breakpoint-sass/breakpoint/parsers/double/_double-string.scss",
+        "sass/breakpoint-sass/breakpoint/parsers/double/_default.scss"
+      ]
+    },
+    {
+      "path": "sass/breakpoint-sass/breakpoint/parsers/_resolution.scss",
+      "imports": [
+        "sass/breakpoint-sass/breakpoint/parsers/resolution/_resolution.scss"
+      ]
+    },
+    {
+      "path": "sass/breakpoint-sass/breakpoint/parsers/_single.scss",
+      "imports": [
+        "sass/breakpoint-sass/breakpoint/parsers/single/_default.scss"
+      ]
+    },
+    {
+      "path": "sass/breakpoint-sass/breakpoint/parsers/_triple.scss",
+      "imports": [
+        "sass/breakpoint-sass/breakpoint/parsers/triple/_default.scss"
+      ]
     }
   ],
   "projectView": {
@@ -114,7 +179,7 @@
     }
   },
   "browser-sync": {
-    "enable": false,
+    "enable": true,
     "clicks": true,
     "forms": true,
     "scroll": true
