--- a/prepros-6.config
+++ b/prepros-6.config
@@ -6,12 +6,16 @@
     {
       "path": "sass/index.scss",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"css/style.css\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "js/script.js",
+      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"js/app.min.js\",\"sourceMap\":true,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":true},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"outputSuffix\":\"-dist\"}"
     }
   ],
   "fileTree": {
     "expandedDirs": [
       "js/lib",
-      "sass"
+      "js"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
